# brihatools

./: .gitignore  BUILD_EXE.md  Makefile  README.md  Specifications.md  biome.jsonc  framer.html  index.html  main.py  nepali-pdf.html  package-lock.json  package.json  photo_framer.spec  poster.html  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
_old/src/framer/: downloader.ts  main.ts  photoLoader.ts  ui.ts
_old/src/nepali-pdf/: main.ts  table.ts  types.ts
_old/src/poster/: category.ts
photo_framer/: __init__.py  cli.py  engine.py  gui.py  gui_service.py  models.py
python-archive/: .gitignore  main.py  pyproject.toml
python-archive/photo_framer/: engine.py  gui.py  gui_service.py
src/: alpine.ts  alpinejs.d.ts  app.tsx  framer.ts  framer.worker.ts  hostRedirect.ts  index.css  main.ts  main.tsx  preeti.d.ts  style.css
src/components/layout/: app-header.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  slider.tsx
src/features/framer/: framer-page.tsx
src/features/framer/hooks/: use-photo-framer.ts
src/features/framer/lib/: state.ts  (+5 more)
src/features/home/: home-page.tsx
src/features/nepali-pdf/: nepali-pdf-page.tsx
src/features/poster/: poster-page.tsx
src/framer/: downloader.ts  frameLoader.ts  main.ts  previewRenderer.ts  state.ts  worker.ts
src/hooks/: use-host-redirect.ts
src/lib/: canvas.ts  exif.ts  image.ts
src/nepali-pdf/: download.ts  main.ts  pdf.ts  table.ts  text.ts  types.ts  ui.ts
src/poster/: background.ts  canvas.ts  frames.ts  main.ts  suggestions.ts
(+8 files in other folders)
