[project]
name = "photo-framer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.0.0",
    "customtkinter>=5.2.0",
    "numba>=0.57.0",
    "rembg[cpu]>=2.0.72",
]

[dependency-groups]
dev = [
    "ty>=0.0.14",
    "pyinstaller>=6.0.0",
]

[project.scripts]
photo-framer = "main:main"
photo-framer-cli = "photo_framer.cli:main"
photo-framer-gui = "photo_framer.gui:main"
